--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,30 @@
 services:
+  timescaledb:
+    image: timescale/timescaledb:latest-pg16
+    environment:
+      POSTGRES_USER: trading
+      POSTGRES_PASSWORD: trading123
+      POSTGRES_DB: trading_pipeline
+    ports:
+      - "5432:5432"
+    volumes:
+      - timescale_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U trading -d trading_pipeline"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   server:
     build: .
     ports:
       - "8080:8080"
+    environment:
+      DATABASE_URL: postgres://trading:trading123@timescaledb:5432/trading_pipeline?sslmode=disable
+    depends_on:
+      timescaledb:
+        condition: service_healthy
     restart: unless-stopped
+
+volumes:
+  timescale_data:
